feature: add intersect and except

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
   - go get github.com/mattn/goveralls
 
 script:
+  - go generate ./... && git diff --exit-code; code=$?; (exit $code)
   - golangci-lint run ./...
   - go vet ./...
   - go test -covermode=count -coverprofile=profile.cov ./...
